[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/screens/ScreenBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/stylized_shape/Rectangle.tscn" type="PackedScene" id=2]
[ext_resource path="res://miscellaneous/fonts/dynamic_fonts/H4_headline.tres" type="DynamicFont" id=3]
[ext_resource path="res://ui/components/TextButton/TextButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/components/Forms/FormTextInput/FormTextInput.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/components/IconButton/IconButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/screens/CreateUser/CreateUser.gd" type="Script" id=7]

[node name="CreateUser" instance=ExtResource( 1 )]
margin_right = 0.0
margin_bottom = 0.0
script = ExtResource( 7 )

[node name="Style" type="Control" parent="." index="0"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BackgroundBox" parent="Style" index="0" instance=ExtResource( 2 )]
corner_radius = [ 0, 0, 0, 0 ]

[node name="MarginContainer" parent="." index="1"]
custom_constants/margin_right = 37
custom_constants/margin_top = 37
custom_constants/margin_left = 112

[node name="Style" type="Control" parent="MarginContainer" index="0"]
margin_left = 112.0
margin_top = 37.0
margin_right = 868.0
margin_bottom = 640.0

[node name="BackgroundBox" parent="MarginContainer/Style" index="0" instance=ExtResource( 2 )]
background_color = "SECONDARY"
corner_radius = [ 2, 2, 0, 0 ]

[node name="Content" type="MarginContainer" parent="MarginContainer" index="1"]
margin_left = 112.0
margin_top = 37.0
margin_right = 868.0
margin_bottom = 640.0
custom_constants/margin_right = 52
custom_constants/margin_top = 32
custom_constants/margin_left = 52

[node name="Layout" type="VBoxContainer" parent="MarginContainer/Content" index="0"]
margin_left = 52.0
margin_top = 32.0
margin_right = 704.0
margin_bottom = 603.0
custom_constants/separation = 16

[node name="Header" type="MarginContainer" parent="MarginContainer/Content/Layout" index="0"]
margin_right = 652.0
margin_bottom = 84.0
custom_constants/margin_right = 12
custom_constants/margin_left = 12

[node name="Layout" type="HBoxContainer" parent="MarginContainer/Content/Layout/Header" index="0"]
margin_left = 12.0
margin_right = 640.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 84 )
custom_constants/separation = 30

[node name="Logo" type="TextureRect" parent="MarginContainer/Content/Layout/Header/Layout" index="0"]
margin_right = 116.0
margin_bottom = 84.0
rect_min_size = Vector2( 116, 0 )

[node name="Title" type="Label" parent="MarginContainer/Content/Layout/Header/Layout" index="1"]
margin_left = 146.0
margin_top = 12.0
margin_right = 628.0
margin_bottom = 72.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Crear usuario"
valign = 1

[node name="Space" type="Control" parent="MarginContainer/Content/Layout" index="1"]
margin_top = 100.0
margin_right = 652.0
margin_bottom = 100.0

[node name="NewNameInput" parent="MarginContainer/Content/Layout" index="2" instance=ExtResource( 5 )]
margin_top = 116.0
margin_right = 652.0
margin_bottom = 180.0
rect_min_size = Vector2( 652, 64 )
custom_constants/margin_right = 12
custom_constants/margin_top = 0
custom_constants/margin_left = 12
custom_constants/margin_bottom = 0
new_placeholder = "Ingresar Nombre"

[node name="NewLastNameInput" parent="MarginContainer/Content/Layout" index="3" instance=ExtResource( 5 )]
margin_top = 196.0
margin_right = 652.0
margin_bottom = 260.0
rect_min_size = Vector2( 652, 64 )
custom_constants/margin_right = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 0
new_placeholder = "Ingresar apellido"

[node name="NewEmailInput" parent="MarginContainer/Content/Layout" index="4" instance=ExtResource( 5 )]
margin_top = 276.0
margin_right = 652.0
margin_bottom = 340.0
rect_min_size = Vector2( 652, 64 )
custom_constants/margin_right = 12
custom_constants/margin_top = 0
custom_constants/margin_left = 12
custom_constants/margin_bottom = 0
new_placeholder = "Ingresar correo electrónico"

[node name="NewPasswordInput" parent="MarginContainer/Content/Layout" index="5" instance=ExtResource( 5 )]
margin_top = 356.0
margin_right = 652.0
margin_bottom = 420.0
rect_min_size = Vector2( 652, 64 )
custom_constants/margin_right = 12
custom_constants/margin_top = 0
custom_constants/margin_left = 12
custom_constants/margin_bottom = 0
new_placeholder = "Contraseña (8 a 12 crcts. Letras, números y símbolos)"
password_mode = true

[node name="Space2" type="Control" parent="MarginContainer/Content/Layout" index="6"]
margin_top = 436.0
margin_right = 652.0
margin_bottom = 452.0
rect_min_size = Vector2( 0, 16 )

[node name="Footer" type="MarginContainer" parent="MarginContainer/Content/Layout" index="7"]
margin_top = 468.0
margin_right = 652.0
margin_bottom = 532.0
rect_min_size = Vector2( 0, 64 )
custom_constants/margin_right = 12
custom_constants/margin_left = 12

[node name="Layout" type="HBoxContainer" parent="MarginContainer/Content/Layout/Footer" index="0"]
margin_left = 12.0
margin_right = 640.0
margin_bottom = 64.0
custom_constants/separation = 0

[node name="BackButton" parent="MarginContainer/Content/Layout/Footer/Layout" index="0" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 52.0
margin_bottom = 64.0
_new_symbol = "<"

[node name="Space" type="Control" parent="MarginContainer/Content/Layout/Footer/Layout" index="1"]
margin_left = 52.0
margin_right = 450.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="CreateButton" parent="MarginContainer/Content/Layout/Footer/Layout" index="2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 450.0
margin_right = 628.0
margin_bottom = 64.0
_new_title = "Crear"

[node name="ChangeDeck" parent="ErrorMessage" index="0"]
margin_right = 892.0

[node name="Message" parent="ErrorMessage" index="1"]
margin_right = 892.0

[node name="CongratulationsMessage" parent="." index="3"]
margin_right = 15674.0
margin_bottom = 11520.0

[connection signal="button_down" from="MarginContainer/Content/Layout/Footer/Layout/BackButton" to="." method="_on_BackButton_button_down"]
[connection signal="normal_flip" from="MarginContainer/Content/Layout/Footer/Layout/CreateButton" to="." method="_on_CreateButton_normal_flip"]
